# deterministic_replanning

./: README.md
elastic_strips/: CMakeLists.txt  package.xml
elastic_strips/config/: binary_logger_elastic.yaml  binary_logger_trj.yaml  params.yaml  sharework_params.yaml  trajectories.yaml
elastic_strips/data/data_persona/: elastic_strip_2021-02-09-13-37-55.bag  prova1_2021-02-18-13-10-33.bag  prova_2021-02-18-11-09-15.bag  registazione1_2021-02-18-13-55-14.bag  registazione3_2021-02-18-13-56-10.bag  registazione5_2021-02-18-13-57-09.bag  registazione6_2021-02-18-16-50-55.bag  registrazione2_2021-02-18-13-55-37.bag  registrazione4_2021-02-18-13-56-45.bag  registrazione7_2021-02-23-16-32-37.bag  registrazione8_2021-02-23-16-35-04.bag  registrazione9_2021-03-01-14-46-02.bag  registrazioneee_2021-03-01-15-27-02.bag
elastic_strips/include/elastic_strips/: elastic_strips.h
elastic_strips/launch/: binary_logger_elastic.launch  execute_trj.launch  sim.launch  test.launch  trj_automatic_binary_logger_elastic.launch
elastic_strips/src/: node.cpp  node.cpp.autosave  sim_human.cpp
elastic_strips/src/elastic_strips/: elastic_strips.cpp
