<?xml version="1.0"?>
<package format="2">
  <name>elastic_strips</name>
  <version>0.0.0</version>
  <description>The elastic_strips package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosdyn_core</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosdyn_core</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosdyn_core</exec_depend>
  <exec_depend>tf</exec_depend>
  <depend>eigen_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>subscription_notifier</depend>
  <depend>name_sorting</depend>


  <export>
  </export>
</package>
